Creat: connect normalize.scss

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,5 +2,7 @@
 @import 'var'
 //Подключение настроек   
 @import 'settings'
+//Подключение normalize 
+@import '_normalize.scss'
 // Подключение header
 @import 'block/header'
