--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,11 @@ template {
   padding: 40px 0;
 }
 
+.navbar-top__menu-button {
+  display: none;
+  padding: 0;
+}
+
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
@@ -393,6 +398,7 @@ template {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 31px 0;
+  margin: 0;
 }
 
 .navbar-menu__item {
@@ -401,8 +407,20 @@ template {
 }
 
 .navbar-menu__link {
+  font-size: 14px;
+  line-height: 18px;
   text-decoration: none;
-  color: #FFFFFF;
+  color: inherit;
+}
+
+.logo {
+  width: 177px;
+  height: 24px;
+}
+
+.logo__img {
+  width: 100%;
+  height: 100%;
 }
 
 .search {
@@ -471,6 +489,64 @@ template {
 @media (max-width: 992px) {
   .container {
     max-width: 760px;
+  }
+  .navbar-top {
+    padding: 30px 0;
+  }
+  .navbar__search {
+    margin-left: auto;
+  }
+  .navbar-menu__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .logo {
+    width: 133px;
+    height: 18px;
+  }
+  .search__input {
+    max-width: 340px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 93%;
+  }
+  .search,
+  .user,
+  .navbar-bottom {
+    display: none;
+  }
+  .menu-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    widows: 16px;
+    height: 11px;
+    border: none;
+    background-color: #FFFFFF;
+  }
+  .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333333;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 90%;
+  }
+  .logo {
+    width: 99px;
   }
 }
 /*# sourceMappingURL=style.css.map */
