--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,4 +4,44 @@
 @media (max-width: 992px)
   .container
     max-width: 760px
+  .navbar
+    &-top
+      padding: 30px 0
+    &__search
+      margin-left: auto
+    &-menu
+      &__link
+        font-size: 12px
+        line-height: 15px
+  .logo
+    width: 133px
+    height: 18px
+  .search
+    &__input
+      max-width: 340px    
+@media ( max-width: 768px )
+  .container
+    max-width: 93%
+  .search,
+  .user,
+  .navbar-bottom
+    display: none
+  .menu
+    &-button
+      display: flex
+      justify-content: space-between
+      flex-direction: column
+      widows: 16px
+      height: 11px
+      border: none
+      background-color: $light
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media ( max-width: 576px )
+  .container
+    max-width: 90%
+  .logo
+    width: 99px
       
