--- a/sass/block/_header.sass
+++ b/sass/block/_header.sass
@@ -5,6 +5,9 @@
     align-items: center
     justify-content: space-between
     padding: 40px 0
+    &__menu-button
+      display: none
+      padding: 0
   &__search
     margin-right: auto 
     margin-left: 108px
@@ -15,12 +18,21 @@
     align-items: center
     justify-content: space-between
     padding: 31px 0
+    margin: 0
     &__item
       list-style: none
       color: $light
     &__link
+      font-size: 14px
+      line-height: 18px
       text-decoration: none
-      color: $light
+      color: inherit
+.logo
+  width: 177px
+  height: 24px
+  &__img
+    width: 100%
+    height: 100%      
 .search
   display: flex
   position: relative
