--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,12 @@ template {
   .container {
     max-width: 90%;
   }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .container {
+    max-width: 90%;
+  }
   .logo {
     width: 99px;
     height: 13px;
