--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -42,7 +42,9 @@
 @media ( max-width: 576px )
   .container
     max-width: 90%
+@media (min-width: 320px) and ( max-width: 480px )
+  .container
+    max-width: 90%
   .logo
     width: 99px
     height: 13px
-      
