--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -35,6 +35,7 @@
       height: 11px
       border: none
       background-color: $light
+      cursor: pointer
       &__line
         width: 16px
         height: 1px
