--- a/sass/block/_header.sass
+++ b/sass/block/_header.sass
@@ -57,6 +57,7 @@
     right: 0
     background-color: $primary
     border: none
+    cursor: pointer
 .user
   display: flex
   align-items: center 
