Create: hotel-info

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'block/header'
 //Подлючение блока хлебные крошки
 @import 'block/breadcrumb'
+//Подлючение блока отель
+@import 'block/hotel'
 // подключение медиа запросов
 @import 'media'
