--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,10 +40,25 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .hotel
+    &-name
+      flex-basis: 100%
+    &-wrapper
+      justify-content: space-between
+    &-info
+      &__text
+        width: 100%
+      &__rating
+        display: none
+      &__offer
+        margin-left: 0
+        order: -1
+  .stars
+    flex-basis: content
 @media ( max-width: 576px )
   .container
     max-width: 90%
-@media (min-width: 320px) and ( max-width: 480px )
+@media ( max-width: 480px )
   .container
     max-width: 90%
   .logo
