--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -11,7 +11,7 @@
     &__name
       margin-top: 4px
       margin-bottom: 0px
-    &-description
+    &__discription
       margin: 5px 0
   &-name
     
