--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -41,6 +41,8 @@
         height: 1px
         background-color: $text-color
   .hotel
+    padding-top: 8px
+    padding-bottom: 20px
     &-name
       flex-basis: 100%
     &-wrapper
