--- a/css/style.css
+++ b/css/style.css
@@ -650,6 +650,10 @@ template {
     height: 1px;
     background-color: #333333;
   }
+  .hotel {
+    padding-top: 8px;
+    padding-bottom: 20px;
+  }
   .hotel-name {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
