--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -56,7 +56,7 @@
         margin-left: 0
         order: -1
   .stars
-    flex-basis: content
+    flex-basis: auto
 @media ( max-width: 576px )
   .container
     max-width: 90%
