--- a/css/style.css
+++ b/css/style.css
@@ -676,8 +676,8 @@ template {
             order: -1;
   }
   .stars {
-    -ms-flex-preferred-size: content;
-        flex-basis: content;
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
   }
 }
 
