--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -41,9 +41,14 @@
   color: $light
   background-color: $primary
   border-radius: 4px
+  
   &__text
     font-size: 8px
     line-height: 10px
   &__counter
     font-size: 14px
     line-height: 18px
+    font-weight: bold
+.five
+  font-size: 11px
+  line-height: 18px
