--- a/css/style.css
+++ b/css/style.css
@@ -591,7 +591,7 @@ template {
   font-weight: bold;
 }
 
-.rating__counter__five {
+.rating__counter--small {
   font-size: 11px;
   line-height: 18px;
 }
