--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -49,6 +49,6 @@
     font-size: 14px
     line-height: 18px
     font-weight: bold
-    &__five
+    &--small
       font-size: 11px
       line-height: 18px
