--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body {
   margin: auto;
 }
 
+img {
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -520,6 +526,7 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .hotel-info__offer {
@@ -594,6 +601,42 @@ template {
 .rating__counter--small {
   font-size: 11px;
   line-height: 18px;
+}
+
+.swiper-container {
+  position: relative;
+  width: 728px;
+  height: 450px;
+  border-radius: 8px;
+}
+
+.slider {
+  position: absolute;
+}
+
+.slider-button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  z-index: 99;
+  border: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.slider-button--next {
+  background-image: url(../img/arrow-right.svg);
+  right: 18px;
+}
+
+.slider-button--prev {
+  background-image: url(../img/arrow-left.svg);
+  left: 18px;
 }
 
 @media (max-width: 1200px) {
