--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -5,6 +5,7 @@
     display: flex
     align-items: center
     justify-content: space-between
+    padding-bottom: 20px
     &__offer
       margin-top: 4px
       margin-left: 14px
@@ -52,3 +53,28 @@
     &--small
       font-size: 11px
       line-height: 18px
+.swiper-container 
+  position: relative
+  width: 728px
+  height: 450px
+  border-radius: 8px
+.slider
+  position: absolute
+  &-button
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    width: 30px
+    height: 30px
+    z-index: 99
+    border: none
+    background-color: transparent
+    background-repeat: no-repeat
+    background-position: center
+    cursor: pointer
+    &--next
+      background-image: url(../img/arrow-right.svg)
+      right: 18px
+    &--prev
+      background-image: url(../img/arrow-left.svg)
+      left: 18px
