--- a/css/style.css
+++ b/css/style.css
@@ -605,13 +605,30 @@ template {
 
 .swiper-container {
   position: relative;
-  width: 728px;
+  width: 100%;
   height: 450px;
   border-radius: 8px;
 }
 
-.slider {
+.swiper-container:after {
+  content: '';
+  width: 100%;
+  height: 100%;
   position: absolute;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 122, 223, 0.48)), to(rgba(255, 255, 255, 0.128)));
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.swiper-slide__img {
+  width: 100%;
+  height: 100%;
+}
+
+.slider {
+  width: 728px;
 }
 
 .slider-button {
@@ -626,6 +643,7 @@ template {
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 10px;
   cursor: pointer;
 }
 
