--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -53,13 +53,27 @@
     &--small
       font-size: 11px
       line-height: 18px
-.swiper-container 
-  position: relative
-  width: 728px
-  height: 450px
-  border-radius: 8px
+.swiper
+  &-container 
+    position: relative
+    width: 100%
+    height: 450px
+    border-radius: 8px
+    &:after
+      content: ''
+      width: 100%
+      height: 100%
+      position: absolute
+      background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+      top: 0
+      left: 0
+      z-index: 10
+  &-slide
+    &__img
+      width: 100%
+      height: 100%
 .slider
-  position: absolute
+  width: 728px
   &-button
     position: absolute
     top: 50%
@@ -71,6 +85,7 @@
     background-color: transparent
     background-repeat: no-repeat
     background-position: center
+    background-size: 10px
     cursor: pointer
     &--next
       background-image: url(../img/arrow-right.svg)
