--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -59,6 +59,7 @@
     width: 100%
     height: 450px
     border-radius: 8px
+  &-slide
     &:after
       content: ''
       width: 100%
@@ -68,6 +69,7 @@
       top: 0
       left: 0
       z-index: 10
+   
   &-slide
     &__img
       width: 100%
