--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -60,16 +60,16 @@
     height: 450px
     border-radius: 8px
   &-slide
-    &:after
-      content: ''
-      width: 100%
-      height: 100%
-      position: absolute
-      background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-      top: 0
-      left: 0
-      z-index: 10
-   
+    &:nth-child(5n-3)
+      &:after
+        content: ''
+        width: 100%
+        height: 100%
+        position: absolute
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        top: 0
+        left: 0
+        z-index: 10
   &-slide
     &__img
       width: 100%
