--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -50,7 +50,7 @@
     font-size: 14px
     line-height: 18px
     font-weight: bold
-    &--small
+    &-small
       font-size: 11px
       line-height: 18px
 .swiper
@@ -60,16 +60,15 @@
     height: 450px
     border-radius: 8px
   &-slide
-    &:nth-child(5n-3)
-      &:after
-        content: ''
-        width: 100%
-        height: 100%
-        position: absolute
-        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-        top: 0
-        left: 0
-        z-index: 10
+    &:after
+      content: ''
+      width: 100%
+      height: 100%
+      position: absolute
+      background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+      top: 0
+      left: 0
+      z-index: 10
   &-slide
     &__img
       width: 100%
@@ -88,6 +87,7 @@
     background-repeat: no-repeat
     background-position: center
     background-size: 10px
+    outline: none
     cursor: pointer
     &--next
       background-image: url(../img/arrow-right.svg)
