--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,19 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 100%
+    margin-bottom: 30px
+  .hotel
+    &-grid
+      flex-direction: column
+    &-shell
+      flex-direction: row
+  .booking
+    max-width: 48%
+  .map
+    width: 48%
+  
 @media (max-width: 992px)
   .container
     max-width: 760px
@@ -55,6 +68,15 @@
       &__offer
         margin-left: 0
         order: -1
+    &-shell
+      flex-direction: column
+  .slider
+    margin-bottom: 20px
+  .booking
+    max-width: 100%
+    margin-bottom: 20px
+  .map
+    width: 100%
   .stars
     flex-basis: auto
 @media ( max-width: 576px )
