--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -27,6 +27,10 @@
   &-grid
     display: flex
     justify-content: space-between
+  &-shell
+    display: flex
+    flex-direction: column
+    justify-content: space-between
     
   
 .stars
@@ -129,8 +133,7 @@
       font-size: 12px
       line-height: 16px
       margin-bottom: 9px
-  &-person
-    margin-top: 4px
+  &-person   
     display: flex
     max-width: 80px
     height: 40px
@@ -140,10 +143,18 @@
     font-size: 12px
     line-height: 16px
     &__guests
+      display: flex
+      margin-top: 4px
       margin-bottom: 9px
+    &__room
+      display: flex
     &__user
+      width: 14px
+      height: 14px
       margin-right: 9px
     &__home
+      width: 14px
+      height: 14px
       margin-right: 14px
   &-call
     display: flex
@@ -170,4 +181,9 @@
     border: none
     outline: none
     color: $light
-    
+.map
+  width: 347px
+  height: 213px
+  background-color: black   
+  border-radius: 10px
+  overflow: hidden
