--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -82,9 +82,15 @@
 @media ( max-width: 576px )
   .container
     max-width: 90%
+  .swiper
+    &-container
+      height: 350px
 @media ( max-width: 480px )
   .container
     max-width: 90%
   .logo
     width: 99px
     height: 13px
+  .swiper
+    &-container
+      height: 250px
