fix: media 320 and 770

--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -181,6 +181,10 @@
     border: none
     outline: none
     color: $light
+    font-style: normal
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
 .map
   width: 347px
   height: 213px 
