--- a/css/style.css
+++ b/css/style.css
@@ -812,6 +812,10 @@ template {
   border: none;
   outline: none;
   color: #FFFFFF;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
 }
 
 .map {
@@ -851,7 +855,7 @@ template {
 
 @media (max-width: 992px) {
   .container {
-    max-width: 760px;
+    max-width: 93%;
   }
   .navbar-top {
     padding: 30px 0;
@@ -968,7 +972,10 @@ template {
     height: 13px;
   }
   .swiper-container {
-    height: 250px;
+    height: 179px;
+  }
+  .map {
+    height: 173px;
   }
 }
 /*# sourceMappingURL=style.css.map */
