--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,7 +16,7 @@
   
 @media (max-width: 992px)
   .container
-    max-width: 760px
+    max-width: 93%
   .navbar
     &-top
       padding: 30px 0
@@ -93,4 +93,6 @@
     height: 13px
   .swiper
     &-container
-      height: 250px
+      height: 179px
+  .map
+    height: 173px
