Create: add section newsletter

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'block/breadcrumb'
 //Подлючение блока отель
 @import 'block/hotel'
+//Подлючение блока отель
+@import 'block/newsletter'
 // подключение медиа запросов
 @import 'media'
