--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,85 @@ template {
   overflow: hidden;
 }
 
+.newsletter {
+  position: relative;
+  padding: 98px 0 87px 0;
+  background-image: url(../img/newsleter-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 40px;
+}
+
+.newsletter:before {
+  content: '';
+  position: absolute;
+  background-color: rgba(10, 34, 61, 0.8);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.newsletter-wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 730px;
+  margin: auto;
+  color: #FFFFFF;
+}
+
+.newsletter-title {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.newsletter-title__strong {
+  display: block;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 45px;
+  text-transform: uppercase;
+}
+
+.newsletter-subscribe {
+  position: relative;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.newsletter-subscribe__input {
+  padding-right: 75px;
+  padding-left: 33px;
+  width: 350px;
+  min-height: 55px;
+}
+
+.newsletter-subscribe__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 65px;
+  height: 55px;
+  background-color: #EC1F46;
+  color: #FFFFFF;
+  border: none;
+  outline: none;
+  ont-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
