--- a/sass/block/_newsletter.sass
+++ b/sass/block/_newsletter.sass
@@ -1,15 +1,12 @@
 .newsletter
   position: relative
   padding: 98px 0 87px 0
-  background-image: url(../img/newsleter-bg.jpg)
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
+  background: transparent
   margin-bottom: 40px
   &:before
     content: ''
     position: absolute
-    background-color: rgba(10, 34, 61, 0.8)
+    background-color: rgba($dark, 0.8)
     top: 0
     left: 0
     width: 100%
@@ -43,6 +40,10 @@
       padding-left: 33px
       width: 350px
       min-height: 55px
+      font-weight: 300
+      font-size: 14px
+      line-height: 18px
+      color: #BDBDBD
     &__button
       position: absolute
       top: 0
