Create: add block.response

--- a/sass/block/_newsletter.sass
+++ b/sass/block/_newsletter.sass
@@ -2,7 +2,7 @@
   position: relative
   padding: 98px 0 87px 0
   background: transparent
-  margin-bottom: 40px
+
   &:before
     content: ''
     position: absolute
@@ -57,3 +57,4 @@
       ont-weight: bold
       font-size: 12px
       line-height: 15px
+      cursor: pointer
