--- a/css/style.css
+++ b/css/style.css
@@ -577,6 +577,63 @@ template {
           justify-content: space-between;
 }
 
+.hotel-slider {
+  width: 728px;
+  height: 450px;
+}
+
+.hotel-slider__img {
+  width: 100%;
+  height: 100%;
+}
+
+.hotel-slider__button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  z-index: 99;
+  border: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+  outline: none;
+  cursor: pointer;
+}
+
+.hotel-slider__button--next {
+  background-image: url(../img/arrow-right.svg);
+  right: 18px;
+}
+
+.hotel-slider__button--prev {
+  background-image: url(../img/arrow-left.svg);
+  left: 18px;
+}
+
+.hotel-slider__item {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.hotel-slider__item:after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 122, 223, 0.48)), to(rgba(255, 255, 255, 0.128)));
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
 .hotel-shell {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -627,61 +684,6 @@ template {
 .rating__counter-small {
   font-size: 11px;
   line-height: 18px;
-}
-
-.swiper-container {
-  position: relative;
-  width: 100%;
-  height: 450px;
-  border-radius: 8px;
-}
-
-.swiper-slide:after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 122, 223, 0.48)), to(rgba(255, 255, 255, 0.128)));
-  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
-  top: 0;
-  left: 0;
-  z-index: 10;
-}
-
-.swiper-slide__img {
-  width: 100%;
-  height: 100%;
-}
-
-.slider {
-  width: 728px;
-}
-
-.slider-button {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  z-index: 99;
-  border: none;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 10px;
-  outline: none;
-  cursor: pointer;
-}
-
-.slider-button--next {
-  background-image: url(../img/arrow-right.svg);
-  right: 18px;
-}
-
-.slider-button--prev {
-  background-image: url(../img/arrow-left.svg);
-  left: 18px;
 }
 
 .booking {
@@ -830,7 +832,6 @@ template {
   position: relative;
   padding: 98px 0 87px 0;
   background: transparent;
-  margin-bottom: 40px;
 }
 
 .newsletter:before {
@@ -904,6 +905,149 @@ template {
   ont-weight: bold;
   font-size: 12px;
   line-height: 15px;
+  cursor: pointer;
+}
+
+.response {
+  padding: 40px 0 70px 0;
+}
+
+.response__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 70px;
+}
+
+.response-slider__item {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 730px;
+  background: #FFFFFF;
+  border-radius: 8px;
+  margin: 45px auto 0;
+  padding: 0 62px 30px;
+}
+
+.response-slider__item:before {
+  content: '';
+  position: absolute;
+  top: 13px;
+  left: 62px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../img/quote-left.svg);
+  background-repeat: no-repeat;
+}
+
+.response-slider__item:after {
+  content: '';
+  position: absolute;
+  top: 118px;
+  right: 62px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../img/quote-right.svg);
+  background-repeat: no-repeat;
+}
+
+.response-slider__button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 10px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.response-slider__button--prev {
+  left: 0;
+  background-image: url(../img/response-prev.svg);
+}
+
+.response-slider__button--next {
+  right: 0;
+  background-image: url(../img/response-next.svg);
+}
+
+.response-slider__profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: -45px;
+  padding-bottom: 32px;
+}
+
+.response-slider__avatar {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 9px;
+}
+
+.response-slider__name {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #EC1F46;
+  margin-bottom: 10px;
+}
+
+.response-slider__date {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 13px;
+  margin-bottom: 5px;
+}
+
+.response-slider__rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.response-slider__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 160%;
+  text-align: justify;
+  margin: auto;
+  max-width: 537px;
 }
 
 @media (max-width: 1200px) {
