--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -26,7 +26,48 @@
     align-items: center
   &-grid
     display: flex
-    justify-content: space-between
+    justify-content: space-between  
+  &-slider
+    width: 728px
+    height: 450px
+    &__img
+      width: 100%
+      height: 100%
+    &__button
+      position: absolute
+      top: 50%
+      transform: translateY(-50%)
+      width: 30px
+      height: 30px
+      z-index: 99
+      border: none
+      background-color: transparent
+      background-repeat: no-repeat
+      background-position: center
+      background-size: 10px
+      outline: none
+      cursor: pointer
+      &--next
+        background-image: url(../img/arrow-right.svg)
+        right: 18px
+      &--prev
+        background-image: url(../img/arrow-left.svg)
+        left: 18px
+    &__item
+      position: relative
+      width: 100%
+      height: 100%
+      border-radius: 8px
+      overflow: hidden
+      &:after
+        content: ''
+        width: 100%
+        height: 100%
+        position: absolute
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        top: 0
+        left: 0
+        z-index: 10
   &-shell
     display: flex
     flex-direction: column
@@ -61,48 +102,6 @@
     &-small
       font-size: 11px
       line-height: 18px
-.swiper
-  &-container 
-    position: relative
-    width: 100%
-    height: 450px
-    border-radius: 8px
-  &-slide
-    &:after
-      content: ''
-      width: 100%
-      height: 100%
-      position: absolute
-      background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-      top: 0
-      left: 0
-      z-index: 10
-  &-slide
-    &__img
-      width: 100%
-      height: 100%
-.slider
-  width: 728px
-  &-button
-    position: absolute
-    top: 50%
-    transform: translateY(-50%)
-    width: 30px
-    height: 30px
-    z-index: 99
-    border: none
-    background-color: transparent
-    background-repeat: no-repeat
-    background-position: center
-    background-size: 10px
-    outline: none
-    cursor: pointer
-    &--next
-      background-image: url(../img/arrow-right.svg)
-      right: 18px
-    &--prev
-      background-image: url(../img/arrow-left.svg)
-      left: 18px
 .booking
   display: flex
   flex-wrap: wrap
