--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,7 +10,9 @@
 @import 'block/breadcrumb'
 //Подлючение блока отель
 @import 'block/hotel'
-//Подлючение блока отель
+//Подлючение блока подписка
 @import 'block/newsletter'
+//Подлючение блока отзывы
+@import 'block/response'
 // подключение медиа запросов
 @import 'media'
