--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -72,12 +72,11 @@
     display: flex
     flex-direction: column
     justify-content: space-between
-    
-  
+  &__slider
+    margin-left: 0
 .stars
   flex-basis: 100%
 .offer
-  
   font-size: 10px
   line-height: 13px
   padding: 4px 9px
@@ -91,7 +90,6 @@
   color: $light
   background-color: $primary
   border-radius: 4px
-  
   &__text
     font-size: 8px
     line-height: 10px
