--- a/sass/block/_response.sass
+++ b/sass/block/_response.sass
@@ -14,7 +14,8 @@
       display: flex
       flex-direction: column
       align-items: center
-      width: 730px
+      max-width: 730px
+      min-height: 280px
       background: #FFFFFF
       border-radius: 8px
       margin: 45px auto 0
