--- a/sass/block/_newsletter.sass
+++ b/sass/block/_newsletter.sass
@@ -35,7 +35,7 @@
     border-radius: 4px
     overflow: hidden
     &__input
-      padding-right: 75px
+      padding-right: 110px
       padding-left: 33px
       min-height: 55px
       font-weight: 300
@@ -47,13 +47,13 @@
       position: absolute
       top: 0
       right: 0
-      width: 65px
+      min-width: 65px
       height: 55px
       background-color: $primary
       color: $light
       border: none
       outline: none
-      ont-weight: bold
+      font-weight: bold
       font-size: 12px
       line-height: 15px
       cursor: pointer
