--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'block/newsletter'
 //Подлючение блока отзывы
 @import 'block/response'
+//Подлючение блока развлечения
+@import 'block/activites'
 // подключение медиа запросов
 @import 'media'
