--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -94,6 +94,7 @@
   .stars
     flex-basis: auto
   .response
+    padding-bottom: 60px
     &__title
       font-size: 18px
       line-height: 23px
@@ -141,7 +142,13 @@
   .hotel
     &-slider
       height: 350px
+  .response
+    padding-bottom: 50px
   .activites
+    &-title
+      font-weight: bold
+      font-size: 18px
+      line-height: 23px
     &-wrapper
       flex-wrap: wrap
     &__card
