Create: add block packages

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'block/response'
 //Подлючение блока развлечения
 @import 'block/activites'
+//Подлючение блока другие пакеты
+@import 'block/packages'
 // подключение медиа запросов
 @import 'media'
