--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -29,9 +29,9 @@
       &__link
         font-size: 12px
         line-height: 15px
-  .logo
-    width: 133px
-    height: 18px
+    &__logo
+      width: 133px
+      height: 18px
   .search
     &__input
       max-width: 340px    
@@ -158,9 +158,10 @@
 @media ( max-width: 480px )
   .container
     max-width: 90%
-  .logo
-    width: 99px
-    height: 13px
+  .navbar
+    &__logo
+      width: 99px
+      height: 13px
   .hotel
     &-slider
       height: 179px
