--- a/sass/block/_header.sass
+++ b/sass/block/_header.sass
@@ -27,9 +27,9 @@
       line-height: 18px
       text-decoration: none
       color: inherit
+    &__logo
+      width: 177px
 .logo
-  width: 177px
-  height: 24px
   &__img
     width: 100%   
 .search
