--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'block/activites'
 //Подлючение блока другие пакеты
 @import 'block/packages'
+//Подлючение блока подвал
+@import 'block/footer'
 // подключение медиа запросов
 @import 'media'
