--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -33,11 +33,12 @@
     align-items: center
     justify-content: space-between
     flex-wrap: wrap
-
+    margin-bottom: 95px
   &__ul
     padding: 0
     margin: 0
     list-style: none
+
   &__title
     font-style: normal
     font-weight: bold
@@ -59,6 +60,11 @@
     color: $footer-text-color
     &--mb-2
       margin-bottom: 20px
+    &--pay
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
   &__icon
     &--wrapper
       min-width: 40px
@@ -98,9 +104,26 @@
     outline: none
     border-radius: 4px
     cursor: pointer
+    
   &__info
     font-style: normal
     font-weight: bold
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+  &__conditions
+    display: flex
+    grid-column: 2/ 5
+    justify-content: space-between
+    align-items: center
+    height: 22px
+    color: $light
+    margin-left: 135px
+  &__ul--rules
+    display: flex
+    min-width: 283px
+    justify-content: space-between
+    list-style: none
+    margin: 0
+    padding: 0
+
