Creat: media footer

--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -13,6 +13,8 @@
     align-self: stretch
   &__categories
     grid-row: 1 / 4
+  &__legal
+    margin-left: 69px
   &__social
     &-links
       display: flex
@@ -28,12 +30,12 @@
       grid-column: span 2
     &-form
       grid-column: span 2
+      margin-bottom: 95px
   &__form
     display: flex
     align-items: center
     justify-content: space-between
     flex-wrap: wrap
-    margin-bottom: 95px
   &__ul
     padding: 0
     margin: 0
@@ -90,6 +92,11 @@
     border: none
     flex-basis: 100%
     margin-bottom: 22px
+  &__send
+    width: 100%
+    align-items: center
+    display: flex
+    justify-content: space-between
   &__button
     font-style: normal
     font-weight: bold
