--- a/css/style.css
+++ b/css/style.css
@@ -1251,6 +1251,10 @@ template {
   grid-row: 1 / 4;
 }
 
+.footer__legal {
+  margin-left: 69px;
+}
+
 .footer__social-links {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1280,6 +1284,7 @@ template {
 
 .footer__contact-form {
   grid-column: span 2;
+  margin-bottom: 95px;
 }
 
 .footer__form {
@@ -1294,7 +1299,6 @@ template {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 95px;
 }
 
 .footer__ul {
@@ -1381,6 +1385,19 @@ template {
   margin-bottom: 22px;
 }
 
+.footer__send {
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .footer__button {
   font-style: normal;
   font-weight: bold;
@@ -1465,6 +1482,10 @@ template {
   .activites__card {
     margin-right: 20px;
   }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 @media (max-width: 992px) {
@@ -1499,6 +1520,63 @@ template {
     width: 49%;
     margin-right: 0;
     margin-bottom: 20px;
+  }
+  .footer {
+    padding: 73px 0 33px 0;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: (1fr)[6];
+        grid-template-columns: repeat(6, 1fr);
+    grid-row-gap: 40px;
+  }
+  .footer__logo {
+    width: 104px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    grid-column: span 2;
+  }
+  .footer__social-network {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    grid-column: span 4;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .footer__categories {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    grid-column: span 2;
+  }
+  .footer__legal {
+    grid-column: span 2;
+  }
+  .footer__information {
+    grid-column: span 2;
+  }
+  .footer__contact-details {
+    grid-column: span 5;
+    -ms-grid-row: 3;
+    grid-row: 3;
+  }
+  .footer__contact-form {
+    grid-column: span 5;
+    -ms-grid-row: 4;
+    grid-row: 4;
+    margin-bottom: 63px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 49%;
+        flex-basis: 49%;
+  }
+  .footer__conditions {
+    margin: 0;
+    -ms-grid-row: 5;
+    grid-row: 5;
+    grid-column: span 6;
   }
 }
 
@@ -1638,6 +1716,13 @@ template {
     width: 49%;
     margin-bottom: 20px;
   }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .footer__legal {
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1663,6 +1748,58 @@ template {
     width: 100%;
     margin-bottom: 20px;
   }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__legal {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__information {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__categories {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__conditions {
+    -ms-grid-row: 8;
+    grid-row: 8;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
 }
 
 @media (max-width: 480px) {
@@ -1678,6 +1815,31 @@ template {
   }
   .map {
     height: 173px;
+  }
+  .footer__icon--wrapper {
+    margin-right: 12px;
+  }
+  .footer__form {
+    max-width: 281px;
+  }
+  .footer__send {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer__info {
+    margin-bottom: 15px;
+  }
+  .footer__conditions {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer__ul--rules {
+    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=style.css.map */
