--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -17,6 +17,9 @@
   .activites
     &__card
       margin-right: 20px
+  .footer
+    &__input
+      flex-basis: 100%
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 93%
@@ -46,6 +49,41 @@
       width: 49%
       margin-right: 0
       margin-bottom: 20px
+  .footer
+    padding: 73px 0 33px 0
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px
+    &__logo
+      width: 104px
+      grid-row: 1/2
+      grid-column: span 2
+    &__social
+      &-network
+        grid-row: 1/2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2/3
+      grid-column: span 2
+    &__legal
+      grid-column: span 2
+    &__information
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        grid-column: span 5
+        grid-row: 4
+        margin-bottom: 63px
+    &__input
+      flex-basis: 49%
+    &__conditions
+      margin: 0
+      grid-row: 5
+      grid-column: span 6
 @media ( max-width: 768px )
   .container
     max-width: 93%
@@ -135,6 +173,11 @@
     &__card
       width: 49%
       margin-bottom: 20px
+  .footer
+    &__input
+      flex-basis: 100%
+    &__legal
+      margin-left: 0
   
 @media ( max-width: 576px )
   .container
@@ -154,7 +197,35 @@
     &__card
       width: 100%
       margin-bottom: 20px
-  
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__legal
+      grid-row: 3
+      grid-column: 1
+    &__information
+      grid-row: 4
+      grid-column: 1
+    &__categories
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+      &-form
+        grid-row: 7
+        grid-column: 1
+    &__conditions
+      grid-row: 8
+      grid-column: 1
 @media ( max-width: 480px )
   .container
     max-width: 90%
@@ -167,3 +238,20 @@
       height: 179px
   .map
     height: 173px
+  .footer
+    &__icon
+      &--wrapper
+        margin-right: 12px
+    &__form
+      
+      max-width: 281px
+    &__send
+      flex-direction: column-reverse
+      align-items: start
+    &__info
+      margin-bottom: 15px
+    &__conditions
+      flex-wrap: wrap
+    &__ul
+      &--rules
+        margin-bottom: 10px
