--- a/sass/block/_activites.sass
+++ b/sass/block/_activites.sass
@@ -10,7 +10,7 @@
   &-wrapper
     display: flex
     justify-content: space-between
-  &__card
+  &__cards
     position: relative
     display: flex
     flex-direction: column
