--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -67,9 +67,8 @@
       font-weight: normal
       font-size: 12px
       line-height: 15px
-  &__icon
-    &--wrapper
-      min-width: 40px
+  &__image
+    min-width: 40px
   &__text
     color: $footer-text-color
     margin-bottom: 22px
