--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -31,7 +31,7 @@
     &-form
       grid-column: span 2
       margin-bottom: 95px
-  &__form
+  &__forma
     display: flex
     align-items: center
     justify-content: space-between
