Create: mobile menu

--- a/sass/block/_header.sass
+++ b/sass/block/_header.sass
@@ -22,6 +22,9 @@
     &__item
       list-style: none
       color: $light
+      &--mobile
+        &--visible
+          display: none
     &__link
       font-size: 14px
       line-height: 18px
@@ -73,4 +76,6 @@
     line-height: 18px
     color: $text-color
 
+
+        
 
