--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,10 @@ template {
   color: #FFFFFF;
 }
 
+.navbar-menu__item--mobile--visible {
+  display: none;
+}
+
 .navbar-menu__link {
   font-size: 14px;
   line-height: 18px;
@@ -1492,17 +1496,20 @@ template {
   .container, .newsletter-wrapper {
     max-width: 93%;
   }
-  .navbar-top {
+  body {
+    padding-top: 78px;
+  }
+  body-top {
     padding: 30px 0;
   }
-  .navbar__search {
+  body__search {
     margin-left: auto;
   }
-  .navbar-menu__link {
+  body-menu__link {
     font-size: 12px;
     line-height: 15px;
   }
-  .navbar__logo {
+  body__logo {
     width: 133px;
     height: 18px;
   }
@@ -1584,10 +1591,70 @@ template {
   .container {
     max-width: 93%;
   }
-  .search,
-  .user,
+  .navbar-top {
+    padding-top: 28px;
+    padding-bottom: 28px;
+  }
+  .navbar__mobile--fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 999;
+  }
+  .navbar__user--mobile--hidden, .navbar__search--mobile--hidden {
+    display: none;
+  }
+  .navbar__user--mobile--visible, .navbar__search--mobile--visible {
+    margin-left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar__search--mobile--visible {
+    margin-bottom: 30px;
+  }
+  .navbar__user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navbar-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item--mobile--visible {
+    display: block;
+  }
   .navbar-bottom {
     display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 78px;
+    padding-top: 30px;
+  }
+  .navbar-bottom__visible {
+    display: block;
+  }
+  .user__name--light {
+    color: #FFFFFF;
+    margin-left: 0;
+    margin-top: 10px;
+    margin-bottom: 27px;
   }
   .menu-button {
     display: -webkit-box;
@@ -1805,6 +1872,14 @@ template {
 @media (max-width: 480px) {
   .container {
     max-width: 90%;
+  }
+  .navbar__search--mobile--visible {
+    margin: auto;
+    margin-bottom: 30px;
+    width: 80%;
+  }
+  .navbar-bottom {
+    top: 67px;
   }
   .navbar__logo {
     width: 99px;
