--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,7 +23,8 @@
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 93%
-  .navbar
+  body
+    padding-top: 78px 
     &-top
       padding: 30px 0
     &__search
@@ -87,10 +88,56 @@
 @media ( max-width: 768px )
   .container
     max-width: 93%
-  .search,
-  .user,
-  .navbar-bottom
-    display: none
+  .navbar
+    &-top
+      padding-top: 28px
+      padding-bottom: 28px
+    &__mobile
+      &--fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 999
+    &__user, &__search
+      &--mobile
+        &--hidden
+          display: none
+        &--visible
+          margin-left: 0
+          display: flex
+    &__search
+      &--mobile
+        &--visible
+          margin-bottom: 30px      
+    &__user
+      flex-direction: column
+      justify-content: center 
+    &-menu
+      display: flex
+      flex-direction: column
+      &__item
+        margin-bottom: 20px
+        &--mobile
+          &--visible
+            display: block
+    &-bottom
+      display: none
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 30px
+      &__visible
+        display: block
+  .user
+    &__name
+      &--light
+        color: $light
+        margin-left: 0
+        margin-top: 10px 
+        margin-bottom: 27px
   .menu
     &-button
       display: flex
@@ -230,6 +277,14 @@
   .container
     max-width: 90%
   .navbar
+    &__search
+      &--mobile
+        &--visible
+          margin: auto
+          margin-bottom: 30px
+          width: 80%
+    &-bottom
+      top: 67px
     &__logo
       width: 99px
       height: 13px
