--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -93,7 +93,7 @@
       padding-top: 28px
       padding-bottom: 28px
     &__mobile
-      &--fixed
+      &_fixed
         position: fixed
         left: 0
         top: 0
@@ -118,8 +118,8 @@
       flex-direction: column
       &__item
         margin-bottom: 20px
-        &--mobile
-          &--visible
+        &_mobile
+          &_visible
             display: block
     &-bottom
       display: none
