--- a/sass/block/_header.sass
+++ b/sass/block/_header.sass
@@ -22,8 +22,8 @@
     &__item
       list-style: none
       color: $light
-      &--mobile
-        &--visible
+      &_mobile
+        &_visible
           display: none
     &__link
       font-size: 14px
