Create: add send mail, modal window

--- a/sass/block/_newsletter.sass
+++ b/sass/block/_newsletter.sass
@@ -43,6 +43,7 @@
       line-height: 18px
       color: #BDBDBD
       width: 350px
+      outline: none
     &__button
       position: absolute
       top: 0
