--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,7 @@
 @import 'block/packages'
 //Подлючение блока подвал
 @import 'block/footer'
+//Подлючение блока модальное окно
+@import 'block/modal'
 // подключение медиа запросов
 @import 'media'
