--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,38 @@ img {
   font-family: 'Nunito', sans-serif;
 }
 
+.input {
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 18px 23px;
+  border: none;
+  margin-bottom: 15px;
+}
+
+.button {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  color: #FFFFFF;
+  background-color: #EC1F46;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -895,6 +927,7 @@ template {
   line-height: 18px;
   color: #BDBDBD;
   width: 350px;
+  outline: none;
 }
 
 .newsletter-subscribe__button {
@@ -1376,6 +1409,7 @@ template {
   padding: 0 23px;
   height: 50px;
   margin-bottom: 15px;
+  outline: none;
 }
 
 .footer__message {
@@ -1387,6 +1421,7 @@ template {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin-bottom: 22px;
+  outline: none;
 }
 
 .footer__send {
@@ -1400,22 +1435,6 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-.footer__button {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px;
-  color: #FFFFFF;
-  background-color: #EC1F46;
-  border: none;
-  outline: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
 
 .footer__info {
@@ -1455,6 +1474,93 @@ template {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  max-width: 487px;
+  padding: 33px 88px;
+  border-radius: 8px;
+  background-color: #0A223D;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #FFFFFF;
+  z-index: 1001;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  cursor: pointer;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+  outline: none;
+}
+
+.modal__message {
+  width: 100%;
+  min-width: 123px;
+  cols: 30;
+  rows: 4;
+  outline: none;
+}
+
+.modal__info {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #E0E0E0;
+}
+
+.modal__send {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
