--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,3 +12,29 @@ img
 
 .booking
   font-family: 'Nunito', sans-serif
+.input
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  background-color: #fff
+  border-radius: 4px
+  padding: 18px 23px
+  border: none
+  margin-bottom: 15px
+.button
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  color: $light
+  background-color: $primary
+  border: none
+  outline: none
+  border-radius: 4px
+  cursor: pointer
