--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -118,6 +118,8 @@
       flex-direction: column
       &__item
         margin-bottom: 20px
+        &_p3
+          padding-bottom: 30px
         &_mobile
           &_visible
             display: block
@@ -131,6 +133,7 @@
       padding-top: 30px
       &__visible
         display: block
+        overflow: auto
   .user
     &__name
       &--light
