--- a/sass/block/_modal.sass
+++ b/sass/block/_modal.sass
@@ -28,6 +28,7 @@
     &--visible
       visibility: visible
       opacity: 1
+      overflow: auto
   &__close
     position: absolute
     top: 17px
