fix: scroll map

--- a/sass/block/_modal.sass
+++ b/sass/block/_modal.sass
@@ -12,6 +12,7 @@
     &--visible
       visibility: visible
       opacity: 1
+      
   &__dialog
     position: fixed
     top: 50%
@@ -28,6 +29,7 @@
     &--visible
       visibility: visible
       opacity: 1
+      max-height: 100%
       overflow: auto
   &__close
     position: absolute
